--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-torch==1.12.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+
+torch==1.2.0+cpu
 editdistance
 matplotlib 
 sacrebleu 
